# skills-internet

./: .gitignore  .lychee.toml  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  README.md  publiccode.yml  pyproject.toml
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS
.github/workflows/: audit-visibility.yml  ci.yml
.plugin/: plugin.json
scripts/: extract_urls.py  monitor_content.py
skills/inet/: SKILL.md  audit.md  conflicts.md
skills/inet-api/: SKILL.md  audit.md  reference.md
skills/inet-mail/: SKILL.md  audit.md  reference.md
skills/inet-toolbox/: SKILL.md  audit.md  reference.md
skills/inet-web/: SKILL.md  audit.md  reference.md
tests/: test_extract_urls.py  test_monitor_content.py
tests/fixtures/: sample_skill.md
