[project]
name = "skills-internet"
version = "0.2.2"
description = "Internet.nl Claude Code Plugin - Test en implementeer moderne internetstandaarden"
requires-python = ">=3.12"
dependencies = ["requests>=2.31.0"]

[dependency-groups]
dev = ["pytest>=8.0", "responses>=0.25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
